--- a/src/scss/partials/_layout.vars.scss
+++ b/src/scss/partials/_layout.vars.scss
@@ -10,7 +10,7 @@ $font-size-xll      :   1.375rem; //22px;
 $font-size-xl       :   1.25rem; //20px
 $font-size-l        :   1.125rem; //18px
 $font-size-base     :   1rem; //16px;
-$font-size-md       :   0.875rem; //14px
+$font-size-md       :   0.95rem; //14px
 $font-size-sm       :   0.75rem; //12px
 $font-size-xs       :   0.625rem; //10px
 $font-size-xxs      :   0.5rem; //8px
