--- a/src/scss/partials/_risk.assessment.scss
+++ b/src/scss/partials/_risk.assessment.scss
@@ -103,6 +103,7 @@ height: calc(100% - 40px);
       .rafc-container{   
     padding: 8px !important;
     height: 100%;
+    font-size: $font-size-md;
       }
       ion-item{
         margin-bottom: 8px;
